rs/macros/core/tests/snapshots/gprogram__generates_init_for_single_ctor.snap
---
source: rs/macros/core/tests/gprogram.rs
expression: result
---
impl MyProgram {
    pub async fn new(p1: u32, p2: String) -> Self {
        Self { p1, p2 }
    }
}
impl sails::meta::ProgramMeta for MyProgram {
    type ConstructorsMeta = meta_in_program::ConstructorsMeta;
    const SERVICES: &'static [(&'static str, sails::meta::AnyServiceMeta)] = &[];
    const ASYNC: bool = true;
}
mod meta_in_program {
    use super::*;
    sails::invocation_io!(
        pub struct __NewParams { pub (super) p1 : u32, pub (super) p2 : String, },
        entry_id = 0u16,
    );
    #[derive(sails::TypeInfo)]
    #[type_info(crate = sails::type_info)]
    pub enum ConstructorsMeta {
        New(__NewParams),
    }
}
#[cfg(target_arch = "wasm32")]
pub mod wasm {
    use super::*;
    use sails::{gstd, hex, prelude::*};
    static mut PROGRAM: Option<MyProgram> = None;
    #[unsafe(no_mangle)]
    extern "C" fn init() {
        let mut input: &[u8] = &gstd::msg::load_bytes().expect("Failed to read input");
        if let Ok(header) = <sails::meta::SailsMessageHeader as sails::Decode>::decode(
            &mut input,
        ) {
            if header.interface_id() != sails::meta::InterfaceId::zero() {
                sails::gstd::unknown_input_panic(
                    "Non zero ctor interface_id",
                    header.to_bytes().as_slice(),
                );
            }
            match header.entry_id() {
                0u16 => {
                    let (p1, p2): (u32, String) = sails::scale_codec::DecodeAll::decode_all(
                            &mut input,
                        )
                        .unwrap_or_else(|_| sails::gstd::unknown_input_panic(
                            "Unknown request",
                            input,
                        ));
                    sails::program_ctor!(
                        PROGRAM = MyProgram::new(p1, p2). await, params_struct =
                        meta_in_program::__NewParams
                    )
                }
                _ => sails::gstd::unknown_input_panic("Unexpected ctor entry_id", input),
            }
        }
    }
    const SERVICES_COUNT: usize = 0usize;
    const INTERFACE_IDS: &'static [(sails::meta::InterfaceId, u8)] = &sails::meta::interface_ids::<
        SERVICES_COUNT,
    >(&[]);
    #[unsafe(no_mangle)]
    extern "C" fn handle() {
        let mut input = gstd::msg::load_bytes().expect("Failed to read input");
        let program_ref = unsafe { PROGRAM.as_ref() }.expect("Program not initialized");
        if let Ok(header) = <sails::meta::SailsMessageHeader as sails::Decode>::decode(
            &mut input.as_slice(),
        ) {
            let header_len = header.hlen().inner() as usize;
            let (interface_id, route_id, entry_id) = header
                .try_match_interfaces(INTERFACE_IDS)
                .expect("Failed to find matching service")
                .into_inner();
            match route_id {
                _ => gstd::unknown_input_panic("Unknown route_id", &[route_id]),
            }
        }
    }
    #[unsafe(no_mangle)]
    extern "C" fn handle_reply() {
        use sails::meta::ProgramMeta;
        if MyProgram::ASYNC {
            gstd::handle_reply_with_hook();
        }
    }
    #[unsafe(no_mangle)]
    extern "C" fn handle_signal() {
        use sails::meta::ProgramMeta;
        if MyProgram::ASYNC {
            gstd::handle_signal();
        }
    }
}
